# linkr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.json  docker-compose.yml  sqlx-data.json
frontend/: package-lock.json  package.json
frontend/src/: app.html  stores.ts
frontend/src/lib/: Error.svelte  Footer.svelte  Header.svelte  LinkTable.svelte
frontend/src/routes/: 403.svelte  404.svelte  500.svelte  503.svelte  __layout.svelte  index.svelte  login.svelte  manage_account.svelte  manage_links.svelte  manage_users.svelte  new_user.svelte  setup.svelte
migrations/: 20200529043130_links-and-users.sql
migrations/2020-05-29-043130_create_links/: down.sql  up.sql
migrations/2020-05-29-043130_links_and_users/: up.sql
public/: 404.html  index.html  index.js  signup.html  signup.js
src/: auth.rs  catchers.rs  crypto.rs  db.rs  links_api.rs  links_models.rs  main.rs  models.rs  pages.rs  repository.rs  routes.rs  schema.rs  shortener.rs  static_files.rs  users_api.rs  users_crypto.rs  users_models.rs
src/models/: links.rs  mod.rs  users.rs
src/routes/: client.rs  links.rs  mod.rs  pages.rs  static_files.rs  users.rs
static/: index.js  links_table.js  style.css  users_table.js
templates/: index.html.hbs  login.html.hbs  signup.html.hbs
templates/pages/: error.html.hbs  index.html.hbs  login.html.hbs  manage_account.html.hbs  manage_links.html.hbs  manage_users.html.hbs  new_user.html.hbs  setup.html.hbs
templates/partials/: footer.html.hbs  header.html.hbs  meta.html.hbs
