[package]
name = "linkr"
version = "0.1.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4", features = ["private-cookies"] }
dotenv = "0.15"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
scrypt = "0.6"
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = "1.4"
rand_core = "0.6"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "handlebars_templates"]

[dependencies.diesel]
version = "1.4"
features = ["postgres", "r2d2", "chrono"]
