[package]
name = "linkr"
version = "0.1.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
scrypt = "0.8"
diesel_migrations = "1.4"
rand_core = "0.6"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["secrets", "json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4"
features = ["r2d2", "chrono"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
