[package]
name = "linkr"
version = "0.2.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
scrypt = "0.10"
rand_core = "0.6"

[dependencies.rocket]
#version = "0.5.0-rc.1"
git = "https://github.com/SergioBenitez/Rocket"
features = ["secrets", "json"]

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["macros", "offline", "migrate", "chrono"]

[dependencies.rocket_db_pools]
# version = "0.1.0-rc"
git = "https://github.com/SergioBenitez/Rocket"
features = ["sqlx_postgres"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
